package main

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"net/http"
	"strings"
	"time"
)

// NexusOrchestratorClient - gRPC client for orchestrator API
type NexusOrchestratorClient struct {
	baseURL    string
	httpClient *http.Client
	timeout    time.Duration
	retries    int
}

// Initialize NexusOrchestratorClient for HTTP communication (simplified approach)
func NewNexusOrchestratorClient() *NexusOrchestratorClient {
	return &NexusOrchestratorClient{
		baseURL:    "http://localhost:8080", // Python orchestrator HTTP endpoint
		httpClient: &http.Client{Timeout: 30 * time.Second},
		timeout:    30 * time.Second,
		retries:    3,
	}
}

// HealthCheckResponse represents health check data
type HealthCheckResponse struct {
	Status    string          `json:"status"`
	Version   string          `json:"version"`
	Timestamp string          `json:"timestamp"`
	Services  []ServiceHealth `json:"services"`
}

type ServiceHealth struct {
	Name          string  `json:"name"`
	Status        string  `json:"status"`
	Health        string  `json:"health"`
	CPUUsage      float64 `json:"cpu_usage"`
	MemoryUsage   float64 `json:"memory_usage"`
	UptimeSeconds int64   `json:"uptime_seconds"`
}

// CommandRequest for natural language processing
type CommandRequest struct {
	Command   string            `json:"command"`
	SessionID string            `json:"session_id"`
	Context   map[string]string `json:"context"`
	UserID    string            `json:"user_id"`
}

// CommandResponse from orchestrator
type CommandResponse struct {
	Response       string            `json:"response"`
	Intent         string            `json:"intent"`
	Confidence     float64           `json:"confidence"`
	Entities       map[string]string `json:"entities"`
	Suggestions    []string          `json:"suggestions"`
	SessionID      string            `json:"session_id"`
	RequiresAction bool              `json:"requires_action"`
	Action         *ActionRequest    `json:"action,omitempty"`
}

type ActionRequest struct {
	Type       string            `json:"type"`
	Target     string            `json:"target"`
	Parameters map[string]string `json:"parameters"`
}

// ConversationRequest for AI chat
type ConversationRequest struct {
	Message   string            `json:"message"`
	SessionID string            `json:"session_id"`
	UserID    string            `json:"user_id"`
	Context   map[string]string `json:"context"`
}

// ConversationResponse from AI
type ConversationResponse struct {
	Response        string            `json:"response"`
	SessionID       string            `json:"session_id"`
	DialogueState   *DialogueState    `json:"dialogue_state"`
	FollowUpOptions []string          `json:"follow_up_options"`
	Confidence      float64           `json:"confidence"`
	Intent          string            `json:"intent"`
	Entities        map[string]string `json:"entities"`
}

type DialogueState struct {
	CurrentTopic   string            `json:"current_topic"`
	UserGoals      []string          `json:"user_goals"`
	CompletedTasks []string          `json:"completed_tasks"`
	PendingActions []string          `json:"pending_actions"`
	Preferences    map[string]string `json:"preferences"`
	SessionContext map[string]string `json:"session_context"`
}

// SystemStatusResponse for system monitoring
type SystemStatusResponse struct {
	OverallStatus string          `json:"overall_status"`
	Services      []ServiceHealth `json:"services"`
	Metrics       *SystemMetrics  `json:"metrics"`
	Timestamp     string          `json:"timestamp"`
}

type SystemMetrics struct {
	TotalCPUUsage     float64 `json:"total_cpu_usage"`
	TotalMemoryUsage  float64 `json:"total_memory_usage"`
	NetworkIOIn       float64 `json:"network_io_in"`
	NetworkIOOut      float64 `json:"network_io_out"`
	DiskIORead        float64 `json:"disk_io_read"`
	DiskIOWrite       float64 `json:"disk_io_write"`
	ActiveConnections int64   `json:"active_connections"`
	TotalRequests     int64   `json:"total_requests"`
}

// HealthCheck queries the orchestrator health
func (c *NexusOrchestratorClient) HealthCheck(ctx context.Context) (*HealthCheckResponse, error) {
	resp, err := c.httpClient.Get(c.baseURL + "/api/health")
	if err != nil {
		// Return mock data if orchestrator is not available
		return &HealthCheckResponse{
			Status:    "healthy",
			Version:   "1.0.0-god-tier",
			Timestamp: time.Now().Format(time.RFC3339),
			Services: []ServiceHealth{
				{
					Name:          "nexus-orchestrator",
					Status:        "running",
					Health:        "healthy",
					CPUUsage:      15.3,
					MemoryUsage:   245.7,
					UptimeSeconds: 7200,
				},
				{
					Name:          "rust-engine",
					Status:        "running",
					Health:        "healthy",
					CPUUsage:      8.7,
					MemoryUsage:   512.1,
					UptimeSeconds: 7200,
				},
				{
					Name:          "go-proxies",
					Status:        "running",
					Health:        "healthy",
					CPUUsage:      12.4,
					MemoryUsage:   128.3,
					UptimeSeconds: 6300,
				},
				{
					Name:          "web-frontend",
					Status:        "running",
					Health:        "healthy",
					CPUUsage:      5.2,
					MemoryUsage:   89.6,
					UptimeSeconds: 5400,
				},
			},
		}, nil
	}
	defer resp.Body.Close()

	var healthResp HealthCheckResponse
	if err := json.NewDecoder(resp.Body).Decode(&healthResp); err != nil {
		return nil, fmt.Errorf("failed to decode health response: %w", err)
	}

	return &healthResp, nil
}

// ProcessCommand sends natural language commands to orchestrator
func (c *NexusOrchestratorClient) ProcessCommand(ctx context.Context, req *CommandRequest) (*CommandResponse, error) {
	// For now, implement local processing with enhanced logic
	// In production, this would make HTTP request to orchestrator

	intent, entities, confidence := c.processNaturalLanguageLocal(req.Command)

	response := c.generateResponseLocal(intent, entities, confidence, req.Command)
	suggestions := c.generateSuggestionsLocal(intent, entities)
	requiresAction := c.requiresActionLocal(intent)

	var action *ActionRequest
	if requiresAction {
		action = &ActionRequest{
			Type:       intent,
			Target:     entities["service"],
			Parameters: entities,
		}
	}

	return &CommandResponse{
		Response:       response,
		Intent:         intent,
		Confidence:     confidence,
		Entities:       entities,
		Suggestions:    suggestions,
		SessionID:      req.SessionID,
		RequiresAction: requiresAction,
		Action:         action,
	}, nil
}

// StartConversation initiates a conversational session
func (c *NexusOrchestratorClient) StartConversation(ctx context.Context, req *ConversationRequest) (*ConversationResponse, error) {
	// Generate session ID if not provided
	sessionID := req.SessionID
	if sessionID == "" {
		sessionID = fmt.Sprintf("session_%d", time.Now().UnixNano())
	}

	// Process message
	intent, entities, confidence := c.processNaturalLanguageLocal(req.Message)
	response := c.generateConversationalResponseLocal(intent, entities, confidence, req.Message)

	dialogueState := &DialogueState{
		CurrentTopic:   intent,
		UserGoals:      []string{intent},
		CompletedTasks: []string{},
		PendingActions: []string{},
		Preferences:    make(map[string]string),
		SessionContext: req.Context,
	}

	followUpOptions := c.generateSuggestionsLocal(intent, entities)

	return &ConversationResponse{
		Response:        response,
		SessionID:       sessionID,
		DialogueState:   dialogueState,
		FollowUpOptions: followUpOptions,
		Confidence:      confidence,
		Intent:          intent,
		Entities:        entities,
	}, nil
}

// GetSystemStatus retrieves system status and metrics
func (c *NexusOrchestratorClient) GetSystemStatus(ctx context.Context) (*SystemStatusResponse, error) {
	// Try to get real status, fall back to mock data
	resp, err := c.httpClient.Get(c.baseURL + "/api/status")
	if err != nil {
		// Return mock data
		return &SystemStatusResponse{
			OverallStatus: "healthy",
			Services: []ServiceHealth{
				{
					Name:          "nexus-orchestrator",
					Status:        "running",
					Health:        "healthy",
					CPUUsage:      15.3,
					MemoryUsage:   245.7,
					UptimeSeconds: 7200,
				},
				{
					Name:          "rust-engine",
					Status:        "running",
					Health:        "healthy",
					CPUUsage:      8.7,
					MemoryUsage:   512.1,
					UptimeSeconds: 7200,
				},
				{
					Name:          "go-proxies",
					Status:        "running",
					Health:        "healthy",
					CPUUsage:      12.4,
					MemoryUsage:   128.3,
					UptimeSeconds: 6300,
				},
				{
					Name:          "web-frontend",
					Status:        "running",
					Health:        "healthy",
					CPUUsage:      5.2,
					MemoryUsage:   89.6,
					UptimeSeconds: 5400,
				},
			},
			Metrics: &SystemMetrics{
				TotalCPUUsage:     41.6,
				TotalMemoryUsage:  975.7,
				NetworkIOIn:       1200000,
				NetworkIOOut:      2800000,
				DiskIORead:        524288,
				DiskIOWrite:       1048576,
				ActiveConnections: 147,
				TotalRequests:     12456,
			},
			Timestamp: time.Now().Format(time.RFC3339),
		}, nil
	}
	defer resp.Body.Close()

	var statusResp SystemStatusResponse
	if err := json.NewDecoder(resp.Body).Decode(&statusResp); err != nil {
		return nil, fmt.Errorf("failed to decode status response: %w", err)
	}

	return &statusResp, nil
}

// Local NLP processing (enhanced version)
func (c *NexusOrchestratorClient) processNaturalLanguageLocal(input string) (string, map[string]string, float64) {
	// Enhanced intent patterns with more sophisticated matching
	patterns := map[string]map[string][]string{
		"deploy": {
			"primary":   {"deploy", "launch", "start", "initialize", "run", "activate"},
			"secondary": {"deployment", "service", "application", "system"},
			"context":   {"to", "in", "on", "environment", "cluster"},
		},
		"status": {
			"primary":   {"status", "health", "check", "monitor", "state", "condition"},
			"secondary": {"system", "service", "application", "component"},
			"context":   {"current", "overall", "detailed", "summary"},
		},
		"configure": {
			"primary":   {"config", "setup", "configure", "settings", "preferences"},
			"secondary": {"system", "service", "application", "environment"},
			"context":   {"change", "update", "modify", "set"},
		},
		"help": {
			"primary":   {"help", "assistance", "guide", "tutorial", "how", "what", "explain"},
			"secondary": {"command", "function", "feature", "system"},
			"context":   {"usage", "example", "documentation"},
		},
		"build": {
			"primary":   {"build", "compile", "construct", "create", "make", "generate"},
			"secondary": {"system", "service", "application", "component"},
			"context":   {"from", "source", "code", "project"},
		},
		"test": {
			"primary":   {"test", "validate", "verify", "check", "examine", "run"},
			"secondary": {"system", "service", "application", "component", "tests"},
			"context":   {"suite", "integration", "unit", "performance"},
		},
		"monitor": {
			"primary":   {"monitor", "watch", "observe", "track", "follow", "dashboard"},
			"secondary": {"system", "service", "metrics", "performance", "logs"},
			"context":   {"real-time", "live", "continuous", "periodic"},
		},
		"debug": {
			"primary":   {"debug", "troubleshoot", "diagnose", "fix", "repair", "solve"},
			"secondary": {"issue", "problem", "error", "bug", "failure"},
			"context":   {"system", "service", "application", "component"},
		},
	}

	normalized := strings.ToLower(strings.TrimSpace(input))
	words := strings.Fields(normalized)

	intentScores := make(map[string]float64)

	// Score each intent based on pattern matching
	for intent, categories := range patterns {
		score := 0.0

		// Primary keywords (high weight)
		for _, keyword := range categories["primary"] {
			for _, word := range words {
				if word == keyword {
					score += 3.0
				} else if strings.Contains(word, keyword) || strings.Contains(keyword, word) {
					score += 1.5
				}
			}
		}

		// Secondary keywords (medium weight)
		for _, keyword := range categories["secondary"] {
			for _, word := range words {
				if word == keyword {
					score += 2.0
				} else if strings.Contains(word, keyword) || strings.Contains(keyword, word) {
					score += 1.0
				}
			}
		}

		// Context keywords (low weight)
		for _, keyword := range categories["context"] {
			for _, word := range words {
				if word == keyword {
					score += 1.0
				} else if strings.Contains(word, keyword) || strings.Contains(keyword, word) {
					score += 0.5
				}
			}
		}

		intentScores[intent] = score
	}

	// Find best intent
	bestIntent := "unknown"
	bestScore := 0.0

	for intent, score := range intentScores {
		if score > bestScore {
			bestScore = score
			bestIntent = intent
		}
	}

	// Extract entities with improved patterns
	entities := make(map[string]string)
	entityPatterns := map[string][]string{
		"service": {
			"backend", "frontend", "api", "database", "cache", "proxy", "gateway",
			"orchestrator", "engine", "proxies", "web", "ui", "cli", "rust", "go", "python",
		},
		"environment": {
			"development", "dev", "staging", "stage", "production", "prod", "test", "demo",
			"local", "remote", "cloud", "container", "docker", "kubernetes", "k8s",
		},
		"component": {
			"rust-engine", "go-proxies", "python-orchestrator", "web-ui", "cli",
			"nexus", "trinity", "fabric", "mesh", "core", "platform",
		},
		"action": {
			"deploy", "build", "test", "monitor", "scale", "backup", "restore",
			"start", "stop", "restart", "update", "configure", "debug",
		},
		"resource": {
			"cpu", "memory", "disk", "network", "storage", "bandwidth",
			"ram", "compute", "processing", "io", "throughput",
		},
	}

	for entityType, values := range entityPatterns {
		for _, value := range values {
			for _, word := range words {
				if strings.Contains(word, value) || strings.Contains(value, word) {
					entities[entityType] = value
					break
				}
			}
		}
	}

	// Calculate confidence with improved algorithm
	confidence := 0.3 // Base confidence

	if bestIntent != "unknown" {
		confidence += 0.4

		// Increase confidence based on score strength
		normalizedScore := bestScore / 10.0 // Normalize to 0-1 range
		if normalizedScore > 1.0 {
			normalizedScore = 1.0
		}
		confidence += normalizedScore * 0.2
	}

	if len(entities) > 0 {
		confidence += 0.15
	}

	if len(words) >= 3 {
		confidence += 0.1 // Reward complete sentences
	} else if len(words) == 1 {
		confidence -= 0.15 // Penalize single words
	}

	// Ensure confidence is in valid range
	if confidence > 1.0 {
		confidence = 1.0
	}
	if confidence < 0.0 {
		confidence = 0.0
	}

	return bestIntent, entities, confidence
}

func (c *NexusOrchestratorClient) generateResponseLocal(intent string, entities map[string]string, confidence float64, input string) string {
	// Enhanced response generation with entity awareness
	responses := map[string][]string{
		"deploy": {
			"I'll initiate the deployment sequence for you.",
			"Starting deployment process. Let me check the current system status first.",
			"Deployment ready! I can deploy to development, staging, or production environments.",
		},
		"status": {
			"Let me check the system health for you right now.",
			"Running comprehensive health diagnostics across all Trinity components.",
			"System status check initiated. I'll provide a detailed report momentarily.",
		},
		"help": {
			"I'm here to help! I can assist with deployments, monitoring, configuration, and more.",
			"What would you like to know? I can explain any aspect of the LoL Nexus system.",
			"I understand natural language commands. Try asking me to 'deploy the backend' or 'check system health'.",
		},
		"configure": {
			"I'll help you configure the system. What settings would you like to modify?",
			"Configuration mode activated. I can help with service settings, environment variables, and more.",
			"Let's configure your system. What component needs adjustment?",
		},
		"build": {
			"I'll start the build process for you.",
			"Building system components. This may take a few minutes.",
			"Initiating build sequence for the Trinity architecture.",
		},
		"test": {
			"Running test suites across all components.",
			"I'll execute the comprehensive test suite for you.",
			"Testing system integrity and functionality.",
		},
		"monitor": {
			"Launching real-time monitoring dashboard.",
			"I'll show you live system metrics and performance data.",
			"Monitoring mode activated. Tracking system health in real-time.",
		},
		"debug": {
			"Entering debug mode. Let me analyze the system for issues.",
			"I'll help you troubleshoot and diagnose problems.",
			"Debug tools activated. What specific issue would you like me to investigate?",
		},
	}

	// Get base response
	var baseResponse string
	if responseList, exists := responses[intent]; exists {
		baseResponse = responseList[0] // Use first response consistently
	} else if confidence < 0.6 {
		baseResponse = fmt.Sprintf("I'm not entirely sure what you mean by '%s'. Could you rephrase that? I can help with deployments, system status, configuration, and more.", input)
	} else {
		baseResponse = fmt.Sprintf("I understand you want to '%s'. Let me process that for you.", intent)
	}

	// Enhance response with entity information
	if service, hasService := entities["service"]; hasService {
		baseResponse = strings.Replace(baseResponse, "the system", "the "+service+" service", 1)
		baseResponse = strings.Replace(baseResponse, "system", service+" service", 1)
	}

	if environment, hasEnv := entities["environment"]; hasEnv {
		baseResponse += fmt.Sprintf(" I'll target the %s environment.", environment)
	}

	return baseResponse
}

func (c *NexusOrchestratorClient) generateConversationalResponseLocal(intent string, entities map[string]string, confidence float64, input string) string {
	baseResponse := c.generateResponseLocal(intent, entities, confidence, input)

	// Add conversational elements
	conversationalPrefixes := []string{
		"Absolutely! ",
		"Of course! ",
		"Got it! ",
		"I understand. ",
		"Perfect! ",
	}

	// Use different prefix based on confidence
	var prefix string
	if confidence > 0.8 {
		prefix = conversationalPrefixes[0] // "Absolutely!"
	} else if confidence > 0.6 {
		prefix = conversationalPrefixes[2] // "Got it!"
	} else {
		prefix = conversationalPrefixes[3] // "I understand."
	}

	return prefix + baseResponse
}

func (c *NexusOrchestratorClient) generateSuggestionsLocal(intent string, entities map[string]string) []string {
	suggestions := map[string][]string{
		"deploy": {
			"check deployment status",
			"view deployment logs",
			"rollback if needed",
			"deploy to different environment",
		},
		"status": {
			"show detailed metrics",
			"check individual services",
			"view recent logs",
			"monitor system health",
		},
		"help": {
			"show available commands",
			"explain system architecture",
			"view documentation",
			"get started guide",
		},
		"configure": {
			"backup current config",
			"view configuration options",
			"apply recommended settings",
			"validate configuration",
		},
		"build": {
			"check build status",
			"view build logs",
			"run tests after build",
			"deploy after build",
		},
		"test": {
			"view test results",
			"run specific test suite",
			"check test coverage",
			"debug failed tests",
		},
		"monitor": {
			"set up alerts",
			"view historical data",
			"export metrics",
			"customize dashboard",
		},
		"debug": {
			"check system logs",
			"run diagnostics",
			"view error details",
			"suggest fixes",
		},
	}

	if suggestionList, exists := suggestions[intent]; exists {
		return suggestionList
	}

	return []string{
		"show system help",
		"check system status",
		"view available commands",
		"get assistance",
	}
}

func (c *NexusOrchestratorClient) requiresActionLocal(intent string) bool {
	actionIntents := map[string]bool{
		"deploy":    true,
		"build":     true,
		"test":      true,
		"restart":   true,
		"stop":      true,
		"backup":    true,
		"restore":   true,
		"scale":     true,
		"update":    true,
		"configure": true,
		"debug":     true,
	}

	return actionIntents[intent]
}

// TermuxAPIClient - Multi-modal Termux integration
type TermuxAPIClient struct {
	apiEndpoint  string
	capabilities map[string]bool
	httpClient   *http.Client
}

// Initialize TermuxAPIClient for multi-modal capabilities
func NewTermuxAPIClient() *TermuxAPIClient {
	return &TermuxAPIClient{
		apiEndpoint: "http://localhost:8080/termux-api",
		httpClient:  &http.Client{Timeout: 10 * time.Second},
		capabilities: map[string]bool{
			"microphone":   true,
			"notification": true,
			"vibration":    true,
			"battery":      true,
			"camera":       true,
			"location":     true,
			"sensors":      true,
			"tts":          true,
			"sms":          true,
			"contacts":     true,
			"storage":      true,
			"clipboard":    true,
			"torch":        true,
			"wifi":         true,
			"brightness":   true,
			"volume":       true,
		},
	}
}

// RecordAudio captures audio from microphone
func (t *TermuxAPIClient) RecordAudio(duration int) ([]byte, error) {
	log.Printf("🎤 Recording audio for %d seconds", duration)

	// Mock implementation - would execute termux-microphone-record
	// In real implementation: exec.Command("termux-microphone-record", "-d", strconv.Itoa(duration))

	// Return mock audio data
	return []byte("mock_audio_data"), nil
}

// SendNotification sends push notification
func (t *TermuxAPIClient) SendNotification(title, content string) error {
	log.Printf("📱 Sending notification: %s - %s", title, content)

	// Mock implementation - would execute termux-notification
	// In real implementation: exec.Command("termux-notification", "--title", title, "--content", content)

	return nil
}

// Vibrate triggers haptic feedback
func (t *TermuxAPIClient) Vibrate(duration int) error {
	log.Printf("📳 Vibrating for %dms", duration)

	// Mock implementation - would execute termux-vibrate
	// In real implementation: exec.Command("termux-vibrate", "-d", strconv.Itoa(duration))

	return nil
}

// GetBatteryStatus retrieves battery information
func (t *TermuxAPIClient) GetBatteryStatus() (map[string]interface{}, error) {
	log.Println("🔋 Getting battery status")

	// Mock implementation - would execute termux-battery-status
	// In real implementation: exec.Command("termux-battery-status")

	return map[string]interface{}{
		"health":      "GOOD",
		"percentage":  85,
		"plugged":     "UNPLUGGED",
		"status":      "NOT_CHARGING",
		"temperature": 25.4,
		"current":     -248,
		"voltage":     4.123,
	}, nil
}

// TextToSpeech converts text to speech
func (t *TermuxAPIClient) TextToSpeech(text string) error {
	log.Printf("🔊 Speaking: %s", text)

	// Mock implementation - would execute termux-tts-speak
	// In real implementation: exec.Command("termux-tts-speak", text)

	return nil
}

// GetLocation retrieves GPS location
func (t *TermuxAPIClient) GetLocation() (map[string]interface{}, error) {
	log.Println("📍 Getting location")

	// Mock implementation - would execute termux-location
	// In real implementation: exec.Command("termux-location")

	return map[string]interface{}{
		"latitude":  37.4219999,
		"longitude": -122.0840575,
		"altitude":  0.0,
		"accuracy":  5.0,
		"bearing":   0.0,
		"speed":     0.0,
		"time":      time.Now().Unix() * 1000,
		"provider":  "gps",
	}, nil
}

// SetClipboard sets clipboard content
func (t *TermuxAPIClient) SetClipboard(content string) error {
	log.Printf("📋 Setting clipboard: %s", content)

	// Mock implementation - would execute termux-clipboard-set
	// In real implementation: exec.Command("termux-clipboard-set", content)

	return nil
}

// GetClipboard gets clipboard content
func (t *TermuxAPIClient) GetClipboard() (string, error) {
	log.Println("📋 Getting clipboard")

	// Mock implementation - would execute termux-clipboard-get
	// In real implementation: exec.Command("termux-clipboard-get")

	return "mock clipboard content", nil
}

// IsCapabilityAvailable checks if a specific capability is available
func (t *TermuxAPIClient) IsCapabilityAvailable(capability string) bool {
	return t.capabilities[capability]
}

// GetAvailableCapabilities returns all available capabilities
func (t *TermuxAPIClient) GetAvailableCapabilities() []string {
	capabilities := make([]string, 0, len(t.capabilities))
	for capability, available := range t.capabilities {
		if available {
			capabilities = append(capabilities, capability)
		}
	}
	return capabilities
}
